<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="30dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    tools:context=".ProfileFragment">

    <TextView
        android:id="@+id/name_title"
        style="@style/text_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_title"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/name_display"
        style="@style/text_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_value"
        android:textAlignment="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/number_title"
        style="@style/text_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_title"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/number_display"
        style="@style/text_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_value"
        android:textAlignment="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_hint" />
    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_button"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

</LinearLayout>